# eth_wallet_tracker_bot

./: .gitignore  Cargo.toml  README.md
src/: app_config.rs  command_handler.rs  commands.rs  common.rs  main.rs  models.rs  repositories.rs
src/commands/: add_wallet.rs  get_transaction.rs  get_wallets.rs  remove_wallet.rs  start.rs
src/models/: etherscan.rs  transaction.rs  user.rs  wallet.rs
src/repositories/: sqlite_db.rs
