[package]
name = "EthWalletTrackerBot"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "eth_wallet_tracker_bot"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
structopt = "0.3"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["full"] }
strum = "0.24"
strum_macros = "0.24"
sqlite = "0.26.0"
rust-crypto = "0.2.36"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }